src/objects/Exception_Log__c.object
<CustomObject>
    <description>This object captures the exceptions related to the code</description>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>Used for backend logic to track exceptions to expected behaviour in UniCRM</description>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <description>Used for backend logic to track exceptions to expected behaviour in UniCRM</description>
        <label>Function Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Used for backend logic to track exceptions to expected behaviour in UniCRM</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Used for backend logic to track exceptions to expected behaviour in UniCRM</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>Used for backend logic to track exceptions to expected behaviour in UniCRM</description>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <description>Used for backend logic to track exceptions to expected behaviour in UniCRM</description>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Used for backend logic to track exceptions to expected behaviour in UniCRM</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stack_Trace__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{00000000}</displayFormat>
        <label>Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>